--- a/app/src/main/res/layout/place_result_card.xml
+++ b/app/src/main/res/layout/place_result_card.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/result_card_background">
+    android:layout_width="match_parent"
+    android:background="@android:color/white">
+<android.support.constraint.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/place_name"
@@ -14,7 +17,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/favorite_icon"
         app:layout_constraintStart_toEndOf="@+id/place_icon"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,22 +29,20 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:layout_marginTop="4dp"
         app:layout_constraintEnd_toStartOf="@+id/favorite_icon"
         app:layout_constraintStart_toEndOf="@+id/place_icon"
         app:layout_constraintTop_toBottomOf="@+id/place_name" />
 
     <ImageView
         android:id="@+id/place_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/category_icon_size"
+        android:layout_height="@dimen/category_icon_size"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@color/colorPrimaryDark"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/favorite_icon"
@@ -51,8 +53,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/distance_to_austin_center"
@@ -60,9 +61,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintEnd_toStartOf="@+id/favorite_icon"
         app:layout_constraintStart_toEndOf="@+id/place_icon"
         app:layout_constraintTop_toBottomOf="@+id/place_category" />
 </android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
